fix mobile spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -566,7 +566,7 @@ a {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	max-width: 85vw;
+	max-width: 86vw;
 	padding: 1em 1em;
 	margin-top: 2em;
 	margin-bottom: 2em;
